--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Kalnia+Glaze:wdth,wght@125,100..700&family=Playwrite+DK+Loopet:wght@100..400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Kalnia+Glaze:wdth,wght@125,100..700&family=Playwrite+DK+Loopet:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Kalnia+Glaze:wdth,wght@125,100..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playwrite+DK+Loopet:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body, * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  color: rgb(46, 46, 52);
+  /* scroll-snap-type: mandatory; */
+  /* scroll-snap-align:inherit; */
 }
